OF-2954: New feature: Spam Reporting
This commit provides a basic implementation of XEP-0377: Spam Reporting

The changes include:
- persistent storage of spam reports
- a provider implementation to allow other spam reporting persistence providers
- an event listening mechanism
- an optional notification of admins